--- a/movies.html
+++ b/movies.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Books</title>
+    <title>Movies</title>
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/books.css">
+    <link rel="stylesheet" href="/styles/movies.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="box1">
         <a href="/index.html"><p class="back">Go back</p></a>
-        <h1>Books</h1>
-        <p>If you ask me what to read, here what I would recommend. </p>
+        <h1>Movies & Series</h1>
+        <p>If you ask me what to watch, here what I would recommend. </p>
     </div>
     <main>
     <div class="box2">
-        <h1>Favourite books</h1>
+        <h1>Favourite movies</h1>
         <div class="images">
             <div class="fade london"><img src="/img/london.jpg" alt=""></div>
             <div class="fade maugham"><img src="/img/maugham.jpg" alt=""></div>
@@ -27,6 +27,19 @@
             <div class="fade remark"><img src="/img/remark.jpg" alt=""></div>
             <div class="fade sacks"><img src="/img/sacks.jpg" alt=""></div>
             <div class="fade golding"><img src="/img/golding.jpg" alt=""></div>
+        </div>
+    </div>
+    <div class="box3" id="box3">
+        <h1>Favourite series</h1>
+        <div class="images">
+            <div class="fade inception"><img src="/img/inception.jpeg" alt=""></div>
+            <div class="fade hp"><img src="/img/harrypotter.jpg" alt=""></div>
+            <div class="fade dead"><img src="/img/dead.jpg" alt=""></div>
+            <div class="fade happiness"><img src="/img/happiness.jpg" alt=""></div>
+            <div class="fade devil"><img src="/img/devil.jpg" alt=""></div>
+            <div class="fade memento"><img src="/img/memento.jpg" alt=""></div>
+            <div class="fade eternal"><img src="/img/eternal.jpg" alt=""></div>
+            <div class="fade mrnobody"><img src="/img/mrnobody.jpg" alt=""></div>
         </div>
     </div>
 </main>
