added movies and changed interests page

--- a/interests.html
+++ b/interests.html
@@ -20,23 +20,21 @@
     Another my passion is neuroscience and neurobiology. I learn 
     about brain structure, how all it works and there's so many
     to learn to!-->
-    <div class="header">
-        <a href="/index.html"><img src="/img/earth.png"><p>Go back</p></a>
+    <header>
+        <a class="back" href="/index.html"><p>Go back</p></a>
         <h1>My interests</h1>
         <div class="intro">
         <p>I love making</p>
         <p class="typing"></p>
         </div>
-        <a href="#box1"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-down" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z"/>
-            <polyline points="6 9 12 15 18 9" /></svg></a>
-    </div>
+        
+    </header>
     <main>
         <div class="description">
             <p>I have plenty of hobbies. I love drawing and sketching,
                 making short videocuts. I enjoy taking pictures. </p>
         </div>
-        <div class="box1" id="box1">
+        <div class="box1">
             <div class="leftbox">
 
             </div>
