--- a/interests.html
+++ b/interests.html
@@ -27,32 +27,59 @@
         <p>I love making</p>
         <p class="typing"></p>
         </div>
-        
     </header>
     <main>
         <div class="description">
             <p>I have plenty of hobbies. I love drawing and sketching,
                 making short videocuts. I enjoy taking pictures. </p>
         </div>
-        <div class="box1">
+        <div class="box">
             <div class="leftbox">
-
+                <img src="/img/draw.png" alt="">
             </div>
             <div class="rightbox">
-
+                <p class="title">Drawing</p>
+                <p>I like to draw small sketches, mostly people's heads. 
+                    Pinterest inspires me, it's where I find references. 
+                    And people. There are dozens of people who inspire me.
+                </p>
             </div>
         </div>
-        <div class="description">
-            <p>I have plenty of hobbies. I love drawing and sketching,
-                making short videocuts. I enjoy taking pictures. </p>
-        </div>
-        <div class="box2">
+        <div class="box">
+            <div class="leftbox">
+                <img src="/img/videos.svg" alt="">
+            </div>
             <div class="rightbox">
-
+                <p class="title">Videocuts</p>
+                <p>I take short videos of my friends and family 
+                    and then I combine it together to make short funny
+                    memorable videocuts.
+                </p>
             </div>
-            <dic class="leftbox">
-                
-            </dic>
+        </div>
+        <div class="box">
+            <div class="leftbox">
+                <img src="/img/girl.svg" alt="">
+            </div>
+            <div class="rightbox">
+                <p class="title">Music</p>
+                <p>I take short videos of my friends and family 
+                    and then I combine it together to make short funny
+                    memorable videocuts.
+                </p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="leftbox">
+                <img src="/img/workout.png" alt="">
+            </div>
+            <div class="rightbox">
+                <p class="title">Working out</p>
+                <p>I take short videos of my friends and family 
+                    and then I combine it together to make short funny
+                    memorable videocuts.
+                </p>
+            </div>
         </div>
     </main>
     <script type="text/javascript" src="typing.js"></script>
