--- a/interests.html
+++ b/interests.html
@@ -50,10 +50,13 @@
                 <img src="/img/videos.svg" alt="">
             </div>
             <div class="rightbox">
-                <p class="title">Videocuts</p>
+                <p class="title">Videocuts & Pictures</p>
                 <p>I take short videos of my friends and family 
                     and then I combine it together to make short funny
-                    memorable videocuts.
+                    memorable videocuts. I Love taking photos and try to 
+                    capture moments that i think are interesting.  I have never 
+                    really pursued anything with photography, but 
+                    it is something I enjoy doing on my own.
                 </p>
             </div>
         </div>
@@ -63,10 +66,33 @@
             </div>
             <div class="rightbox">
                 <p class="title">Music</p>
-                <p>I take short videos of my friends and family 
-                    and then I combine it together to make short funny
-                    memorable videocuts.
+                <p>I love listening to music and taking photos.  
+                    I listen to so many different types of music 
+                    that I can’t even pick a favorite genre.  Each
+                    day I seem to be in the mood for something 
+                    different, and I constantly go through phases 
+                    of loving one genre for a week and then switching
+                    the next week.
                 </p>
+            </div>
+        </div>
+        <div class="description">
+            <p>Find three hobbies you love:</p>
+            <p class="list">One to make you money,
+            one to keep you in shape,
+            and one to be creative.</p>
+        </div>
+        <div class="box">
+            <div class="leftbox">
+                <img src="/img/pic.svg" alt="">
+            </div>
+            <div class="rightbox">
+                <p class="title">Cooking</p>
+                <p>I enjoy cooking desserts and snacks. 
+                    And I always try to find ways of cooking in 
+                    microwave and be creative.
+                </p>
+
             </div>
         </div>
         <div class="box">
@@ -75,11 +101,26 @@
             </div>
             <div class="rightbox">
                 <p class="title">Working out</p>
-                <p>I take short videos of my friends and family 
-                    and then I combine it together to make short funny
-                    memorable videocuts.
+                <p>I don't do specific sports, but I do find 
+                    working out satisfying sometimes. I work 
+                    out to be healthy and strong. 
                 </p>
             </div>
+        </div>
+        <div class="box">
+            <div class="leftbox">
+                <img src="/img/neuro.png" alt="">
+            </div>
+            <div class="rightbox">
+                <p class="title">Neuroscience</p>
+                <p>Another my passion is neuroscience and neurobiology. I learn 
+                    about brain structure, how all it works and there's so many
+                    to learn to! 
+                </p>
+            </div>
+        </div>
+        <div class="description">
+            <p>Love what you do, do what you love.</p>
         </div>
     </main>
     <script type="text/javascript" src="typing.js"></script>
