finished book page

--- a/books.html
+++ b/books.html
@@ -9,14 +9,21 @@
     <link rel="stylesheet" href="/styles/books.css">
 </head>
 <body>
-    <div class="box1">
+    <header>
         <a href="/index.html"><p class="back">Go back</p></a>
         <h1>Books</h1>
         <p>If you ask me what to read, here what I would recommend. </p>
-    </div>
+    </header>
     <main>
-    <div class="box2">
-        <h1>Favourite books</h1>
+    <div class="box">
+        <p class="title">Favourite books</p>
+        <p>Most of these books are novels. I absolutely
+            love fiction and imaginative literature!
+            There are science fiction, dystopia, philosophical novel and
+            psychological fiction among them. I've read all of these books
+            before I turned 18, so I can say that this literature brought 
+            me up.
+        </p>
         <div class="images">
             <div class="fade london"><img src="/img/london.jpg" alt=""></div>
             <div class="fade maugham"><img src="/img/maugham.jpg" alt=""></div>
@@ -27,7 +34,11 @@
             <div class="fade sacks"><img src="/img/sacks.jpg" alt=""></div>
             <div class="fade golding"><img src="/img/golding.jpg" alt=""></div>
         </div>
+        <blockquote>
+            <p>The world belongs to those who read.</p>
+            <cite>Rick Holland. English poet</cite>
+        </blockquote>
     </div>
-</main>
+    </main>
 </body>
 </html>
