Added navigation bar

--- a/books.html
+++ b/books.html
@@ -9,8 +9,17 @@
     <link rel="stylesheet" href="/styles/books.css">
 </head>
 <body>
+    <nav>
+        <a href="/index.html" class="logo">MyUniverse</a>
+        <ul>
+            <li><a href="/interests.html">Interests</a></li>
+            <li><a href="/books.html">Books</a></li>
+            <li><a href="/movies.html">Movies</a></li>
+            <li><a href="/inspiration.html">Inspiration</a></li>
+            <li><a href="/gallery.html">Gallery</a></li>
+        </ul>
+    </nav>
     <header>
-        <a href="/index.html"><p class="back">Go back</p></a>
         <h1>Books</h1>
         <p>If you ask me what to read, here what I would recommend. </p>
     </header>
@@ -35,10 +44,11 @@
             <div class="fade golding"><img src="/img/golding.jpg" alt=""></div>
         </div>
         <blockquote>
-            <p>The world belongs to those who read.</p>
+            <p>"The world belongs to those who read."</p>
             <cite>Rick Holland. English poet</cite>
         </blockquote>
     </div>
     </main>
+    <script type="text/javascript" src="/navbar.js"></script>
 </body>
 </html>
