--- a/inspiration.html
+++ b/inspiration.html
@@ -17,8 +17,17 @@
 	<meta name="theme-color" content="#ffffff">
 </head>
 <body>
+    <nav>
+        <a href="/index.html" class="logo">MyUniverse</a>
+        <ul>
+            <li><a href="/interests.html">Interests</a></li>
+            <li><a href="/books.html">Books</a></li>
+            <li><a href="/movies.html">Movies</a></li>
+            <li><a href="/inspiration.html">Inspiration</a></li>
+            <li><a href="/gallery.html">Gallery</a></li>
+        </ul>
+    </nav>
     <header>
-        <a href="/index.html"><p class="back">Go back</p></a>
         <h1>Inspiration</h1>
         <p>Here I gathered things that make me happy and give me power to live.</p>
     </header>
@@ -30,5 +39,6 @@
             <p>Pinterest inspiring collections</p>
         </div>
     </main>
+    <script type="text/javascript" src="/navbar.js"></script>
 </body>
 </html>
