--- a/gallery.html
+++ b/gallery.html
@@ -10,8 +10,17 @@
     <link rel="stylesheet" href="/styles/gallery.css">
 </head>
 <body>
+    <nav>
+        <a href="/index.html" class="logo">MyUniverse</a>
+        <ul>
+            <li><a href="/interests.html">Interests</a></li>
+            <li><a href="/books.html">Books</a></li>
+            <li><a href="/movies.html">Movies</a></li>
+            <li><a href="/inspiration.html">Inspiration</a></li>
+            <li><a href="/gallery.html">Gallery</a></li>
+        </ul>
+    </nav>
     <header>
-        <a href="/index.html"><p class="back">Go back</p></a>
         <h1>Photo Album</h1>
         <p>Here I gathered photos of my childhood. They're to remember.</p>
     </header>
@@ -29,6 +38,7 @@
             </div>
         </div>
     </section>
+    <script type="text/javascript" src="/navbar.js"></script>
     <script src="gallery.js"></script>
     <style type="text/css">#hellopreloader>p{display:none;}#hellopreloader_preload{display: block;position: fixed;z-index: 99999;top: 0;left: 0;width: 100%;height: 100%;min-width: 1000px;background: #12102D url(http://hello-site.ru//main/images/preloads/rings.svg) center center no-repeat;background-size:128px;}</style>
 <!--<div id="hellopreloader"><div id="hellopreloader_preload"></div><p><a href="http://hello-site.ru">Hello-Site.ru. Бесплатный конструктор сайтов.</a></p></div>
