--- a/interests.html
+++ b/interests.html
@@ -20,8 +20,17 @@
     Another my passion is neuroscience and neurobiology. I learn 
     about brain structure, how all it works and there's so many
     to learn to!-->
+    <nav>
+        <a href="/index.html" class="logo">MyUniverse</a>
+        <ul>
+            <li><a href="/interests.html">Interests</a></li>
+            <li><a href="/books.html">Books</a></li>
+            <li><a href="/movies.html">Movies</a></li>
+            <li><a href="/inspiration.html">Inspiration</a></li>
+            <li><a href="/gallery.html">Gallery</a></li>
+        </ul>
+    </nav>
     <header>
-        <a class="back" href="/index.html"><p>Go back</p></a>
         <h1>My interests</h1>
         <div class="intro">
         <p>I love making</p>
@@ -123,6 +132,7 @@
             <p>Love what you do, do what you love.</p>
         </div>
     </main>
+    <script type="text/javascript" src="/navbar.js"></script>
     <script type="text/javascript" src="typing.js"></script>
 </body>
 </html>
