--- a/movies.html
+++ b/movies.html
@@ -10,27 +10,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="box1">
-        <a href="/index.html"><p class="back">Go back</p></a>
+    <nav>
+        <a href="/index.html" class="logo">MyUniverse</a>
+        <ul>
+            <li><a href="/interests.html">Interests</a></li>
+            <li><a href="/books.html">Books</a></li>
+            <li><a href="/movies.html">Movies</a></li>
+            <li><a href="/inspiration.html">Inspiration</a></li>
+            <li><a href="/gallery.html">Gallery</a></li>
+        </ul>
+    </nav>
+    <header>
         <h1>Movies & Series</h1>
         <p>If you ask me what to watch, here what I would recommend. </p>
-    </div>
+    </header>
     <main>
-    <div class="box2">
-        <h1>Favourite movies</h1>
-        <div class="images">
-            <div class="fade london"><img src="/img/london.jpg" alt=""></div>
-            <div class="fade maugham"><img src="/img/maugham.jpg" alt=""></div>
-            <div class="fade dostoevskiy"><img src="/img/dostoevskiy.jpg" alt=""></div>
-            <div class="fade mcewan"><img src="/img/mcewan.jpg" alt=""></div>
-            <div class="fade orwell"><img src="/img/orwell.jpg" alt=""></div>
-            <div class="fade remark"><img src="/img/remark.jpg" alt=""></div>
-            <div class="fade sacks"><img src="/img/sacks.jpg" alt=""></div>
-            <div class="fade golding"><img src="/img/golding.jpg" alt=""></div>
-        </div>
-    </div>
-    <div class="box3" id="box3">
-        <h1>Favourite series</h1>
+    <div class="box">
+        <p class="title">Favourite movies</p>
+        <blockquote>
+            <p>"Happiness can be found, even in the darkest
+            of times, if one only remembers to turn on light."
+            </p>
+            <cite>Albus Dumbledore</cite>
+        </blockquote>
         <div class="images">
             <div class="fade inception"><img src="/img/inception.jpeg" alt=""></div>
             <div class="fade hp"><img src="/img/harrypotter.jpg" alt=""></div>
@@ -42,6 +44,16 @@
             <div class="fade mrnobody"><img src="/img/mrnobody.jpg" alt=""></div>
         </div>
     </div>
+    <div class="box">
+        <p class="title">Favourite series</p>
+        <div class="images">
+            <div class="fade euphoria"><img src="/img/euphoria.jpg" alt=""></div>
+            <div class="fade sherlock"><img src="/img/sherlok.jpg" alt=""></div>
+            <div class="fade glee"><img src="/img/glee.jpeg" alt=""></div>
+            <div class="fade strangerthings"><img src="/img/strangerthings.jpg" alt=""></div>
+        </div>
+    </div>
+    <script type="text/javascript" src="/navbar.js"></script>
 </main>
 </body>
 </html>
