--- a/books.html
+++ b/books.html
@@ -11,7 +11,12 @@
 <body>
     <nav>
         <a href="/index.html" class="logo">MyUniverse</a>
-        <ul>
+    <!-- <div class="hamburger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div> -->
+        <ul class="nav-links">
             <li><a href="/interests.html">Interests</a></li>
             <li><a href="/books.html">Books</a></li>
             <li><a href="/movies.html">Movies</a></li>
