added mobile navbar

--- a/books.html
+++ b/books.html
@@ -9,25 +9,25 @@
     <link rel="stylesheet" href="/styles/books.css">
 </head>
 <body>
-    <nav>
-        <a href="/index.html" class="logo">MyUniverse</a>
-    <!-- <div class="hamburger">
-            <div class="line"></div>
-            <div class="line"></div>
-            <div class="line"></div>
-        </div> -->
-        <ul class="nav-links">
-            <li><a href="/interests.html">Interests</a></li>
-            <li><a href="/books.html">Books</a></li>
-            <li><a href="/movies.html">Movies</a></li>
-            <li><a href="/inspiration.html">Inspiration</a></li>
-            <li><a href="/gallery.html">Gallery</a></li>
-        </ul>
-    </nav>
     <header>
+        <a href="/index.html" class="logo">MyUniverse</a>
+        <div class="burger">
+            <span></span>
+        </div>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="/interests.html">Interests</a></li>
+                <li><a href="/books.html">Books</a></li>
+                <li><a href="/movies.html">Movies</a></li>
+                <li><a href="/inspiration.html">Inspiration</a></li>
+                <li><a href="/gallery.html">Gallery</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="viewbox">
         <h1>Books</h1>
         <p>If you ask me what to read, here what I would recommend. </p>
-    </header>
+    </div>
     <main>
     <div class="box">
         <p class="title">Favourite books</p>
