--- a/inspiration.html
+++ b/inspiration.html
@@ -17,20 +17,25 @@
 	<meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    <nav>
-        <a href="/index.html" class="logo">MyUniverse</a>
-        <ul>
-            <li><a href="/interests.html">Interests</a></li>
-            <li><a href="/books.html">Books</a></li>
-            <li><a href="/movies.html">Movies</a></li>
-            <li><a href="/inspiration.html">Inspiration</a></li>
-            <li><a href="/gallery.html">Gallery</a></li>
-        </ul>
-    </nav>
     <header>
+        <a href="/index.html" class="logo">MyUniverse</a>
+        <div class="burger">
+            <span></span>
+        </div>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="/interests.html">Interests</a></li>
+                <li><a href="/books.html">Books</a></li>
+                <li><a href="/movies.html">Movies</a></li>
+                <li><a href="/inspiration.html">Inspiration</a></li>
+                <li><a href="/gallery.html">Gallery</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="viewbox">
         <h1>Inspiration</h1>
         <p>Here I gathered things that make me happy and give me power to live.</p>
-    </header>
+    </div>
     <main>
         <div class="people">
             <p>People who inspire me</p>
