--- a/interests.html
+++ b/interests.html
@@ -20,23 +20,28 @@
     Another my passion is neuroscience and neurobiology. I learn 
     about brain structure, how all it works and there's so many
     to learn to!-->
-    <nav>
-        <a href="/index.html" class="logo">MyUniverse</a>
-        <ul>
-            <li><a href="/interests.html">Interests</a></li>
-            <li><a href="/books.html">Books</a></li>
-            <li><a href="/movies.html">Movies</a></li>
-            <li><a href="/inspiration.html">Inspiration</a></li>
-            <li><a href="/gallery.html">Gallery</a></li>
-        </ul>
-    </nav>
     <header>
+        <a href="/index.html" class="logo">MyUniverse</a>
+        <div class="burger">
+            <span></span>
+        </div>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="/interests.html">Interests</a></li>
+                <li><a href="/books.html">Books</a></li>
+                <li><a href="/movies.html">Movies</a></li>
+                <li><a href="/inspiration.html">Inspiration</a></li>
+                <li><a href="/gallery.html">Gallery</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="viewbox">
         <h1>My interests</h1>
         <div class="intro">
         <p>I love making</p>
         <p class="typing"></p>
         </div>
-    </header>
+    </div>
     <main>
         <div class="description">
             <p>I have plenty of hobbies. I love drawing and sketching,
