--- a/movies.html
+++ b/movies.html
@@ -10,20 +10,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <a href="/index.html" class="logo">MyUniverse</a>
-        <ul>
-            <li><a href="/interests.html">Interests</a></li>
-            <li><a href="/books.html">Books</a></li>
-            <li><a href="/movies.html">Movies</a></li>
-            <li><a href="/inspiration.html">Inspiration</a></li>
-            <li><a href="/gallery.html">Gallery</a></li>
-        </ul>
-    </nav>
     <header>
+        <a href="/index.html" class="logo">MyUniverse</a>
+        <div class="burger">
+            <span></span>
+        </div>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="/interests.html">Interests</a></li>
+                <li><a href="/books.html">Books</a></li>
+                <li><a href="/movies.html">Movies</a></li>
+                <li><a href="/inspiration.html">Inspiration</a></li>
+                <li><a href="/gallery.html">Gallery</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="viewbox">
         <h1>Movies & Series</h1>
         <p>If you ask me what to watch, here what I would recommend. </p>
-    </header>
+    </div>
     <main>
     <div class="box">
         <p class="title">Favourite movies</p>
