added about page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<li class="layer" id="planet2" data-depth="-1"><a href="/books.html"><img src="/img/planet2.svg"></a></li>
 			<li class="layer" id="planet3" data-depth="-0.4"><a href="/inspiration.html"><img src="/img/planet3.svg"></a></li>
 			<li class="layer" id="planet4" data-depth="1.5"><a href="/movies.html"><img src="/img/planet4.svg"></a></li>
-			<li class="layer" id="planet5" data-depth="0.7"><a href="/gallery.html"><img src="/img/planet5.svg"></a></li>
+			<li class="layer" id="planet5" data-depth="0.7"><a href="/about.html"><img src="/img/planet5.svg"></a></li>
 			<li class="layer" id="rocket" data-depth="-0.5"><img src="/img/rocket.svg"></li>
 		</ul>
 	</div>
