--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photo album</title>
+    <title>About me</title>
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/gallery.css">
+    <link rel="stylesheet" href="/styles/about.css">
 </head>
 <body>
     <header>
@@ -21,13 +21,13 @@
                 <li><a href="/books.html">Books</a></li>
                 <li><a href="/movies.html">Movies</a></li>
                 <li><a href="/inspiration.html">Inspiration</a></li>
-                <li><a href="/gallery.html">Gallery</a></li>
+                <li><a href="/about.html">About</a></li>
             </ul>
         </nav>
     </header>
     <div class="viewbox">
-        <h1>Photo Album</h1>
-        <p>Here I gathered photos of my childhood. They're to remember.</p>
+        <h1>About me</h1>
+        <p>Some basic information about me</p>
     </div>
     <section>
         <div class="description">
