--- a/inspiration.html
+++ b/inspiration.html
@@ -28,7 +28,7 @@
                 <li><a href="/books.html">Books</a></li>
                 <li><a href="/movies.html">Movies</a></li>
                 <li><a href="/inspiration.html">Inspiration</a></li>
-                <li><a href="/gallery.html">Gallery</a></li>
+                <li><a href="/about.html">About</a></li>
             </ul>
         </nav>
     </header>
