--- a/about.html
+++ b/about.html
@@ -27,23 +27,65 @@
     </header>
     <div class="viewbox">
         <h1>About me</h1>
-        <p>Some basic information about me</p>
+        <p>Some information to get to know me</p>
     </div>
-    <section>
-        <div class="description">
-            <h1>Childhood</h1>
-            <p>Some cute text</p>
-        </div>
-        <div class="gallery">
-            <img src="/img/me1-big.jpg" class="gallery-highlight" alt="">
-            <div class="preview">
-                <img class="me-active" src="/img/me1-small.jpg" alt="">
-                <img src="/img/me2-small.jpg" alt="">
-                <img src="/img/me3-small.jpg" alt="">
+    <div class="box">
+        <div class="about_me">
+            <p>My name</p>
+            <div class="emodji">
+                <img src="/img/myname.png" alt="">
+                <p>Karina</p>
+                
             </div>
         </div>
-    </section>
+        <div class="about_me"><p>My age</p>
+            <div class="emodji">
+                <img src="/img/2.png" alt="">
+                <img src="/img/0.png" alt="">
+            </div>
+        </div>
+        <div class="about_me">
+            <p>My favourite color</p>
+            <div class="emodji">
+                <img src="/img/color.png" alt="">
+                <img src="/img/color2.png" alt="">
+                <img src="/img/color3.png" alt="">
+            </div>
+        </div>
+        <div class="about_me"><p>My height</p>
+            <div class="emodji">
+                <img src="/img/1.png" alt="">
+                <img src="/img/7.png" alt="">
+                <img src="/img/2.png" alt="">
+            </div>
+        </div>
+        <div class="about_me">
+            <p>My sign</p>
+            <div class="emodji">
+                <img src="/img/sign.png" alt="">
+            </div>
+        </div>
+        <div class="about_me"><p>Do I have a lover</p>
+            <div class="emodji">
+                <img src="/img/lover.png" alt="">
+                <img src="/img/yes.png" alt="">
+            </div>
+        </div>
+        <div class="about_me">
+            <p>What's my nationality</p>
+            <div class="emodji">
+                <img src="/img/russia.png" alt="">
+                <img src="/img/ukraine.png" alt="">
+            </div>
+        </div>
+        <div class="about_me"><p>Some things that inspire me</p>
+            <div class="emodji">
+                <img src="/img/love.png" alt="">
+                <img src="/img/earth.png" alt="">
+                <img src="/img/water.png" alt="">
+            </div>
+        </div>
+    </div>
     <script type="text/javascript" src="/navbar.js"></script>
-    <script src="gallery.js"></script>
 </body>
 </html>
