--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
 	<div class="container">
 		<ul id="scene">
-			<li class="layer" id="myuni" data-depth=".1"><h1>My Universe</h1><p class="description">Welcome to my world! Explore it by clicking on planets. Hope you enjoy it!</p></li>
+			<li class="layer" id="myuni" data-depth=".1"><h1>My Universe</h1><p class="description">Welcome to my world! <span>Explore it by clicking on planets. Hope you enjoy it!</span></p></li>
 			<li class="layer" id="planet1" data-depth="0.8"><a href="/interests.html"><img src="/img/planet1.svg"></a></li>
 			<li class="layer" id="planet2" data-depth="-1"><a href="/books.html"><img src="/img/planet2.svg"></a></li>
 			<li class="layer" id="planet3" data-depth="-0.4"><a href="/inspiration.html"><img src="/img/planet3.svg"></a></li>
