--- a/inspiration.html
+++ b/inspiration.html
@@ -37,12 +37,13 @@
         <p>Here I gathered things that make me happy and give me power to live.</p>
     </div>
     <main>
-        <div class="people">
+        <div class="box">
             <p>People who inspire me</p>
         </div>
-        <div class="pinterest">
+        <div class="box">
             <p>Pinterest inspiring collections</p>
         </div>
+        <div class="box">Success stories</div>
     </main>
     <script type="text/javascript" src="/navbar.js"></script>
 </body>
