--- a/inspiration.html
+++ b/inspiration.html
@@ -38,12 +38,78 @@
     </div>
     <main>
         <div class="box">
-            <p>People who inspire me</p>
+            <div class="list">
+                <img src="/img/1.png" alt="">
+                <p class="title">Love<img src="/img/love.png" alt=""></p>
+                <p>In any and all contexts, love is an amazing thing. 
+                    The support and respect and magic that it provides never fails.</p>
+            </div>
+            <div class="list">
+                <img src="/img/2.png" alt="">
+                <p class="title">Community</p>
+                <p>When a group of people comes together because they 
+                    like something, believe in something, support something 
+                    or want to create positive change I am inspired and want 
+                    to be part of something great as well.</p>
+            </div>
+            <div class="list">
+                <img src="/img/3.png" alt="">
+                <p class="title">Music<img src="/img/music.png" alt=""></p>
+                <p>Great songs move people. The creativity and talent that it 
+                    takes to make music amazes me in a wonderful way.</p>
+            </div>
+            <div class="list">
+                <img src="/img/4.png" alt="">
+                <p class="title">Moving my body<img src="/img/move.png" alt=""></p>
+                <p>Physical activities bring clarity and calm. 
+                    They help to quiet my racing, jumbled thoughts. 
+                    They clear away the cobwebs so I can meet my ideas.</p>
+            </div>
+            <div class="list">
+                <img src="/img/5.png" alt="">
+                <p class="title">Dreams</p>
+                <p>I’m talking about the kind of dreams that people work 
+                    towards in their life. Travel and careers and homes 
+                    and creating things – seeing people go after their dreams 
+                    is inspiring.</p>
+            </div>
+            <div class="list">
+                <img src="/img/6.png" alt="">
+                <p class="title">Beauty</p>
+                <p>I’m not talking about people as an example. 
+                    I’m talking about the little things that are 
+                    beautiful. Flowers and sunshine and the way nature 
+                    presents pictures to us in real life that sometimes
+                    can’t be translated into photographs or paintings.</p>
+            </div>
+            <div class="list">
+                <img src="/img/7.png" alt="">
+                <p class="title">Graphic and web design</p>
+                <p> I could look at logos and beautiful websites all day.</p>
+            </div>
+            <div class="list">
+                <img src="/img/8.png" alt="">
+                <p class="title">Quotes from books</p>
+                <p>Words about truly important things in life - such as 
+                    friendship, kindness, love - are so encouraging. They 
+                    lift me up and even make me cry. Quotes that you read 
+                    and get goosebumps.
+                </p>
+            </div>
+            <div class="list">
+                <img src="/img/9.png" alt="">
+                <p class="title"><a href="http://pinterest.ru">Pinterest</a><img src="/img/pinterest.png" alt=""></p>
+                <p> I love browsing the site to see the incredible 
+                    things people come up with. You can click on 
+                    "Pinterest" and explore it.</p>
+            </div>
+            <div class="list">
+                <img src="/img/10.png" alt="">
+                <p class="title">Ocean<img src="/img/water.png" alt=""></p>
+                <p>The smell of the ocean and the sound of the waves 
+                    crashing onto the shore.</p>
+            </div>
         </div>
-        <div class="box">
-            <p>Pinterest inspiring collections</p>
-        </div>
-        <div class="box">Success stories</div>
     </main>
     <script type="text/javascript" src="/navbar.js"></script>
 </body>
