fixed some problems

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     </header>
     <div class="viewbox">
         <h1>About me</h1>
-        <p>Some information to get to know me</p>
+        <p>Some information to get to know me better</p>
     </div>
     <div class="box">
         <div class="about_me">
