--- a/movies.html
+++ b/movies.html
@@ -57,6 +57,12 @@
             <div class="fade glee"><img src="/img/glee.jpeg" alt=""></div>
             <div class="fade strangerthings"><img src="/img/strangerthings.jpg" alt=""></div>
         </div>
+        <blockquote>
+            <p>"You have to make the right choice. As long as you don't 
+                choose, everythings remains possible."
+            </p>
+            <cite>Mr Nobody</cite>
+        </blockquote>
     </div>
     <script type="text/javascript" src="/navbar.js"></script>
 </main>
