--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>My Universe</title>
 	<link rel="stylesheet" href="/styles/style.css">
 	<link rel="apple-touch-icon" sizes="120x120" href="/img/apple-touch-icon.png">
